# client-testing-workshop

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  start.sh
examples/: package.json
examples/timersAndDates/: timersAndDates.js  timersAndDates.test.js
exercise/: Dockerfile  Makefile  api.js
exercise/api-server/: package.json  start-bg.sh
exercise/symbolizer/: package.json  webpack.config.js
exercise/symbolizer/example/: example.js  examples.css  index.html
exercise/symbolizer/php/: Makefile.am  db_config.php  db_config.php.in  milstd_db.php  preview.php
exercise/symbolizer/src/: defence-object.js  priority-selector.js  symbolizer-component.js  value-selector.js
exercise/symbolizer/style/: Makefile.am  Makefile.in  defence-object.styl  mixins.styl  symbol-options.styl  symbolizer-component.styl
presentation/: .gitignore  Gruntfile.js  demo.html  index.html
presentation/templates/: demo.pug  index.pug
presentation/templates/includes/: _mixins.pug
presentation/templates/layouts/: presentation.pug
presentation/templates/slides/: 00_Main.pug  Agenda.pug  E2E.pug  End.pug  Frameworks.pug  HowToStart.pug  IntegrationUiTests.pug  Javascript.pug  Jest.pug  Main.pug  Motivation.pug  React.pug  Resources.pug  TDD.pug  UnitTests.pug
src/api-server/: api.js
src/symbolizer/: package.json  webpack.config.js
src/symbolizer/example/: example.js
src/symbolizer/jest/: haste-map-f69f4135656eef2bc37e4e30ac77d6d7-b4445debc07a20fa64bfc95a5cae4c1d  perf-cache-f69f4135656eef2bc37e4e30ac77d6d7-75c1da49765b279aa53842c7277acb17
(+91 files in other folders)
