PHP_SRC = milstd_db.php \
	get-symbol-defence-priority.php \
	get-tree-data.php \
	projection-codes.php \
	symbols-model.php

phpdir = $(prefix)/srv/www/topo/sources/retia/plugins/symbolizer/src
php_DATA = $(PHP_SRC) \
	db_config.php \
	preview.php

EXTRA_DIST = $(PHP_SRC) \
	db_config.php.in \
	preview.php.in

